--- a/sistema/css/loaderIndex.css
+++ b/sistema/css/loaderIndex.css
@@ -46,7 +46,8 @@
 }
 
 .loaderR {
-    background: rgb(112, 154, 182);
+    background: linear-gradient(90deg, rgba(2, 0, 36, 1) 0%, rgb(90, 90, 109) 35%, rgba(90, 90, 100) 50%);
+    opacity: 0.7;
     width: 100%;
     height: 100vh;
     display: flex;
