--- a/sistema/css/style.css
+++ b/sistema/css/style.css
@@ -109,7 +109,8 @@
 }
 
 .loader {
-    background-image: linear-gradient(90deg, rgba(2, 0, 36, 1) 0%, rgba(214, 214, 227, 1) 35%, rgba(167, 183, 186, 1) 50%);
+    background: linear-gradient(90deg, rgba(2, 0, 36, 1) 0%, rgb(90, 90, 109) 35%, rgba(90, 90, 100) 50%);
+    opacity: 0.7;
     width: 100%;
     height: 100vh;
     display: flex;
