--- a/sistema/css/subidaArchivo.css
+++ b/sistema/css/subidaArchivo.css
@@ -10,8 +10,8 @@ html {
 
 .main-container {
     width: 100%;
-    min-height: 350px;
-    margin-top: 3%;
+    min-height: 100px;
+    margin-top: 4%;
     text-align: center;
     background-image: linear-gradient(90deg, rgba(2, 0, 36, 1) 0%, rgba(18, 40, 27, 1) 18%, rgba(23, 53, 24, 1) 37%, rgba(49, 121, 9, 1) 100%, rgba(0, 212, 255, 1) 100%);
     border: black 5px solid;
@@ -32,7 +32,8 @@ html {
     display: inline-block;
 }
 
-.input-container [type=file] {
+
+/*.input-container [type=file] {
     cursor: inherit;
     display: block;
     font-size: 999px;
@@ -46,16 +47,29 @@ html {
     top: 0;
 }
 
+
 .preview-container {
     margin: 0 auto;
-    width: 350px;
-    min-height: 150px;
+    width: 700%;
+    min-height: 200px;
     background-color: rgb(69, 63, 63);
-    padding: 10px;
+    padding: 45px;
     border-radius: 30px;
 }
 
-.preview-container>embed {
-    width: 170px;
-    height: 150px;
+.preview-container {
+    
+    width: 500px;
+    
+    height: 290px;
+    background-color: rgb(69, 63, 63);
+    padding: 45px;
+    border-radius: 30px;
+    margin: 50px;
 }
+
+.imagen-png {
+    width: 400px;
+    height: 200px;
+    align-items: center;
+}*/
