--- a/sistema/css/subidaFoto.css
+++ b/sistema/css/subidaFoto.css
@@ -10,7 +10,7 @@ html {
 
 .main-container {
     width: 100%;
-    min-height: 350px;
+    min-height: 400px;
     margin-top: 3%;
     text-align: center;
     background-image: linear-gradient(90deg, rgba(2, 0, 36, 1) 0%, rgba(18, 40, 27, 1) 18%, rgba(23, 53, 24, 1) 37%, rgba(49, 121, 9, 1) 100%, rgba(0, 212, 255, 1) 100%);
@@ -32,7 +32,8 @@ html {
     display: inline-block;
 }
 
-.input-container [type=file] {
+
+/*.input-container [type=file] {
     cursor: inherit;
     display: block;
     font-size: 999px;
@@ -44,7 +45,7 @@ html {
     right: 0;
     text-align: right;
     top: 0;
-}
+}*/
 
 .preview-container {
     margin: 0 auto;
@@ -56,6 +57,11 @@ html {
 }
 
 .preview-container>img {
-    width: 200px;
-    height: 180px;
+    width: 250px;
+    height: 200px;
+}
+
+.lista-img {
+    width: 100px;
+    height: 90px;
 }
