--- a/sistema/css/imagenExcel.css
+++ b/sistema/css/imagenExcel.css
@@ -3,7 +3,7 @@
     min-height: 400px;
     margin-top: 3%;
     text-align: center;
-    background-image: linear-gradient(90deg, rgba(2, 0, 36, 1) 0%, rgba(18, 40, 27, 1) 18%, rgba(23, 53, 24, 1) 37%, rgba(49, 121, 9, 1) 100%, rgba(0, 212, 255, 1) 100%);
+    background: #36b9cc;
     border: black 5px solid;
     border-radius: 50px;
     margin-bottom: 5%;
