--- a/sistema/css/subidaFoto.css
+++ b/sistema/css/subidaFoto.css
@@ -1,19 +1,9 @@
-@import url('https://fonts.googleapis.com/css?family=Cabin');
-html {
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    background: rgb(2, 0, 36);
-    background: linear-gradient(214deg, rgba(2, 0, 36, 1) 0%, rgba(9, 9, 121, 1) 35%, rgba(0, 212, 255, 1) 100%);
-    font-family: 'Cabin', sans-serif;
-}
-
 .main-container {
     width: 100%;
     min-height: 400px;
     margin-top: 3%;
     text-align: center;
-    background-image: linear-gradient(90deg, rgba(2, 0, 36, 1) 0%, rgba(18, 40, 27, 1) 18%, rgba(23, 53, 24, 1) 37%, rgba(49, 121, 9, 1) 100%, rgba(0, 212, 255, 1) 100%);
+    background: #36b9cc;
     border: black 5px solid;
     border-radius: 50px;
     margin-bottom: 5%;
